[tool.poetry]
name = "bk-monitor-report"
version = "1.0.4"
description = "custom reporter python sdk for bk-monitor"
authors = ["homholueng <homholueng@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.20.0"
prometheus-client = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = {extras = ["toml"], version = "^5.5"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = 'true'
